--- a/2 - Barra de Navegação Simples com logo - Telas Maiores/CSS Puro/index.html
+++ b/2 - Barra de Navegação Simples com logo - Telas Maiores/CSS Puro/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <nav class="navbar">
-        <h1 class="navbar-brand"><a class="nav-link" href="index.html">Chalé Hotel</a></h1>
+
+        <a class="navbar-brand" href="index.html">
+            <h1 class="nav-brand-title">Chalé Hotel</h1>
+            <img src="https://images.vexels.com/media/users/3/142020/isolated/lists/57c9a9b3b4fdd07cc52898e52d64cea7-vendido-vermelho-arredondado.png" alt="logo">
+        </a>        
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Sobre</a></li>
