Implementação da área de recursos

--- a/18 - Clone Spotify/Boostrap/index.html
+++ b/18 - Clone Spotify/Boostrap/index.html
@@ -65,11 +65,11 @@
       </div><!-- / CONTAINER -->
     </section>
 
-    <section id="sobre" class="bg-light"> <!-- Início sobre -->
+    <section id="sobre" class="bg-light py-4"> <!-- Início sobre -->
       <div class="container"> <!-- Container -->
         <div class="row"> <!--ROW-->
 
-          <div class="col-md-6 d-flex flex-wrap justify-content-center align-items-center my-4 title-color"> <!--COL-->
+          <div class="col-md-6 d-md-flex d-none flex-wrap justify-content-center align-items-center title-color"> <!--COL-->
 
               <div class="col-md-6"> <!--COL-->
                 <img class="img-fluid my-2" src="imagens/img1.jpg" alt="">
@@ -89,7 +89,7 @@
 
           </div> <!-- / COL-->
 
-          <div class="col-md-6 my-4 title-color"><!-- Início Texto sobre -->
+          <div class="col-md-6 title-color"><!-- Início Texto sobre -->
             <h2 class="display-4">O que o Spotify tem?</h2>
             <h3>Músicas</h3>
             <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
@@ -103,6 +103,29 @@
       </div><!-- / Container -->
 
     </section><!-- Fim sobre -->
+
+    <section id="recursos"> <!-- Início Recursos--> 
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+
+            <h2>Fácil</h2>
+            <h3>Buscar</h3>
+            <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+
+            <h3>Navegar</h3>
+            <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+            <h3>Descobrir</h3>
+            <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
+          </div>
+          <div class="col-md-8">
+            Imagem
+          </div>
+        </div>
+      </div>
+
+    </section> <!-- Fim Recursos-->
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
