Implementação da área de rodapé

--- a/18 - Clone Spotify/Boostrap/index.html
+++ b/18 - Clone Spotify/Boostrap/index.html
@@ -120,12 +120,81 @@
             <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
           </div>
           <div class="col-md-8">
-            Imagem
+            <div class="row rotated">
+              <div class="col-md-6">
+                <img src="imagens/iphone1.png" class="img-fluid" alt="">
+              </div>
+              <div class="col-md-6">
+                <img src="imagens/iphone2.png" class="img-fluid" alt="">
+              </div>
+            </div>
           </div>
         </div>
       </div>
-
     </section> <!-- Fim Recursos-->
+
+    <footer id="rodape">
+      <div class="container"> <!-- Conteiner -->
+        <div class="row"> <!-- ROW -->
+        
+          <div class="col-md-8 col-sm-12 col-12"> <!-- COL -->
+            <div class="row d-md-flex"> <!-- ROW -->
+
+              <div class="col-md-3 col-12 logo-rodape-box p-3">
+                <img src="imagens/spotify.svg" width="142" alt="">
+              </div>
+              <div class="col-md-3 col-12">
+                <h4>COMPANY</h4>
+                <ul class="nav">
+                  <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Empregos</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Imprensa</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Novidades</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3 col-sm-12">
+                <h4>COMUNIDADES</h4>
+                <ul class="nav">
+                  <li class="nav-item"><a href="#" class="nav-link">Artistas</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Desenvolvedores</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Marcas</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3 col-sm-12">
+                <h4>LINK UTEIS</h4>
+                <ul class="nav">
+                  <li class="nav-item"><a href="#" class="nav-link">Ajuda</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Presentes</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Player da web</a></li>
+                </ul>
+              </div>
+
+            </div> <!-- / ROW -->
+          </div> <!-- / COL -->
+
+          <div class="col-md-4 col-sm-12 col-12 d-md-flex ">
+            <ul class="nav nav-icons">
+              <li class="nav-item">
+                <a href="#" class="nav-link">
+                  <img src="imagens/instagram.png"alt="">
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">
+                  <img src="imagens/twitter.png"alt="">
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">
+                  <img src="imagens/facebook.png"alt="">
+                </a>
+              </li>
+            </ul>
+          </div>
+
+        </div> <!-- / ROW -->
+      </div><!-- / Conteiner -->
+    </footer>
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
