--- a/18 - Clone Spotify/Boostrap/index.html
+++ b/18 - Clone Spotify/Boostrap/index.html
@@ -137,7 +137,7 @@
       <div class="container"> <!-- Conteiner -->
         <div class="row"> <!-- ROW -->
         
-          <div class="col-md-8 col-sm-12 col-12"> <!-- COL -->
+          <div class="col-md-10 col-sm-12 col-12"> <!-- COL -->
             <div class="row d-md-flex"> <!-- ROW -->
 
               <div class="col-md-3 col-12 logo-rodape-box p-3">
@@ -145,7 +145,7 @@
               </div>
               <div class="col-md-3 col-12">
                 <h4>COMPANY</h4>
-                <ul class="nav">
+                <ul class="navbar-nav">
                   <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">Empregos</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">Imprensa</a></li>
@@ -154,7 +154,7 @@
               </div>
               <div class="col-md-3 col-sm-12">
                 <h4>COMUNIDADES</h4>
-                <ul class="nav">
+                <ul class="navbar-nav">
                   <li class="nav-item"><a href="#" class="nav-link">Artistas</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">Desenvolvedores</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">Marcas</a></li>
@@ -162,7 +162,7 @@
               </div>
               <div class="col-md-3 col-sm-12">
                 <h4>LINK UTEIS</h4>
-                <ul class="nav">
+                <ul class="navbar-nav">
                   <li class="nav-item"><a href="#" class="nav-link">Ajuda</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">Presentes</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">Player da web</a></li>
@@ -172,7 +172,7 @@
             </div> <!-- / ROW -->
           </div> <!-- / COL -->
 
-          <div class="col-md-4 col-sm-12 col-12 d-md-flex ">
+          <div class="col-md-2 col-sm-12 col-12">
             <ul class="nav nav-icons">
               <li class="nav-item">
                 <a href="#" class="nav-link">
